finished the css

--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Train+One&display=swap"
+      rel="stylesheet"
+    />
     <title>Earl Sweatshirt</title>
   </head>
   <body>
-    <div>
-      <h1>Earl Sweatshirt</h1>
+    <h1>Earl Sweatshirt</h1>
+    <img src="./images/pic1.jpg" alt="Earl Sweatshirt" />
 
-      <img src="./images/pic1.jpg" alt="Earl Sweatshirt" />
-
-      <h2>This is a picture of Earl Sweatshirt</h2>
-      <h3>Here are some facts about Earl Sweatshirt</h3>
-
+    <h2>This is a picture of Earl Sweatshirt</h2>
+    <h3>Here are some facts about Earl Sweatshirt</h3>
+    <p>Below are the facts about Earl Sweatshirt</p>
+    <div class="boxed">
       <ul>
-        <li>He raps</li>
+        <li class="darkblue">He raps</li>
         <li>He produces</li>
-        <li>He was a member of Odd Future</li>
+        <li class="darkblue">He was a member of Odd Future</li>
       </ul>
-
-      <a href="https://www.earlsweatshirt.com/"
-        >Click here to go to his website</a
-      >
     </div>
+
+    <a href="https://www.earlsweatshirt.com/" target="_blank"
+      >Click here to go to his website</a
+    >
   </body>
 </html>
